[package]
edition = "2021"
name = "prep-instantiate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
percent-encoding = "2.3.1"
reqwest = "0.12.0"
serde = "1.0.197"
serde_json = "1.0.114"
spend_limit = {path = "../contracts/spend-limit"}
tokio = {version = "1.36.0", features = ["full"]}
