[package]
edition = "2021"
name = "passkey-authenticator"
version = "0.1.0"

[lib]
create-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = { version = "1.4", features = ["stargate", "cosmwasm_1_1"] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.2"
itertools = "0.12.1"
osmosis-authenticators = "0.22.0-alpha.19"
osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust", rev = "c475cb9" }
rstest = "0.18.2"
schemars = "0.8.12"
serde = "1.0.180"
thiserror = { version = "1.0.32" }
time = { version = "0.3.31", features = ["macros"] }
[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \ 
  cosmwasm/rust-optimizer:0.12.5
  """

[dev-dependencies]
mock-cosmwasm-contract = "0.1.2"
osmosis-test-tube = { git = "https://github.com/osmosis-labs/test-tube", rev = "a7e1de5"}
rstest = "0.18.2"