[package]
edition = "2021"
name = "spend-limit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = {version = "1.4", features = ["stargate", "cosmwasm_1_1"]}
cw-storage-plus = "1.1.0"
cw2 = "1.1.2"
itertools = "0.12.1"
osmosis-authenticators = "0.22.0-alpha.5"
osmosis-std = {git = " https://github.com/osmosis-labs/osmosis-rust", branch = "authenticator"}
rstest = "0.18.2"
schemars = "0.8.12"
serde = "1.0.180"
thiserror = {version = "1.0.23"}
time = {version = "0.3.31", features = ["macros"]}

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dev-dependencies]
mock-cosmwasm-contract = "0.1.2"
osmosis-test-tube = {git = " https://github.com/osmosis-labs/test-tube", branch = "authenticator"}
# osmosis-test-tube = {path = "../../../test-tube/packages/osmosis-test-tube"}
rstest = "0.18.2"
